<resources>
    <string name="app_name">SCAN APP</string>
    <string name="logo">LOGO</string>
    <string name="icono">ÍCONO</string>
    <string name="administrador">ADMINISTRADOR</string>
    <string name="usuario">USUARIO</string>
    <string name="version">VERSIÓN 1.0 09/06/2021</string>
    <string name="modelo">POS</string>
    <string name="admLogin">LOGIN ADMINISTRADOR</string>
    <string name="admMenu">MENÚ ADMINISTRADOR</string>
    <string name="crearUsuario">CREAR USUARIO</string>
    <string name="confServer">CONF. SERVIDOR</string>
    <string name="eliminarArea">ELIMINAR ÁREA</string>
    <string name="reiniciarApp">REINICIAR APP</string>
    <string name="activarBase">ACTIVAR BBDD</string>
    <string name="generarRespaldo">GENERAR RESPALDO</string>
    <string name="reportes">REPORTES</string>
    <string name="dispositivos">DISPOSITIVOS</string>
    <string name="conectar">CONECTAR</string>
    <string name="seleccionar">SELECCIONAR:</string>
    <string name="usrLogin">LOGIN USUARIO</string>
    <string name="ingresarClave">INGRESAR CLAVE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="precaucion">PRECAUCIÓN</string>
    <string name="mensaje">MENSAJE</string>
    <string name="http">HTTP://</string>
    <string name="ip">192.168.1.1</string>
    <string name="linkWS">/ISAM/ISAMWS/RECIBE_AREA.PHP</string>
    <string name="grabar">GRABAR</string>
    <string name="confServidor">CONFIGURACIÓN SERVIDOR</string>
    <string name="nombre">NOMBRE</string>
    <string name="rut">RUT</string>
    <string name="agregar">AGREGAR</string>
    <string name="ingresarArea">INGRESAR ÁREA</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="ingresarAreas">INGRESAR ÁREAS</string>
    <string name="ingresarUbicacion">INGRESAR UBICACIÓN</string>
    <string name="enviarAreas">ENVIAR ÁREAS</string>
    <string name="scanear">SCANEAR POR</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="unoAUno">1 A 1</string>
    <string name="tipoCodigo">TIPO CÓDIGO</string>
    <string name="automatico">AUTOMÁTICO</string>
    <string name="manual">MANUAL</string>
    <string name="scan">SCANEAR</string>
    <string name="codigo">CÓDIGO</string>
    <string name="codigo2">CÓDIGO 2</string>
    <string name="sku">SKU</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="revisar">REVISAR</string>
    <string name="cerrar">CERRAR</string>
    <string name="sinDatos">SIN DATOS</string>
    <string name="ingresarCaptura">INGRESAR CAPTURA</string>
    <string name="area">ÁREA</string>
    <string name="ubicacion">UBICACIÓN</string>
    <string name="ean">EAN</string>
    <string name="modCantidad">MOD. CANTIDAD</string>
    <string name="modUbicacion">MOD. UBICACIÓN</string>
    <string name="eliminarCaptura">ELIMINAR CAPTURA</string>
    <string name="revisarCapturas">REVISAR CAPTURAS</string>
    <string name="areasRegistradas">ÁREAS REGISTRADAS</string>
    <string name="areasEnviadas">ÁREAS ENVIADAS</string>
    <string name="enviar">ENVIAR</string>
    <string name="reEnviar">RE-ENVIAR</string>
    <string name="atencion">ATENCIÓN</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="ingresarCantidad">INGRESAR CANTIDAD</string>
    <string name="modificar">MODIFICAR</string>
    <string name="uno">1</string>
    <string name="cantidadUno">CANTIDAD 1</string>
    <string name="numeroCaptura">N° CAPTURA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
