<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogo_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTituloEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/precaucion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space style="@style/espacio" />

        <TextView
            android:id="@+id/mensajeEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/mensaje"
            android:textStyle="bold" />

        <Space style="@style/espacio" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/eliminar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
