<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogo_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            style="@style/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modUbicacion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space style="@style/espacio" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde">

            <EditText
                android:id="@+id/edtUbicacion"
                style="@style/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:hint="@string/ingresarUbicacion"
                android:textSize="12sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:gravity="center_horizontal" />
        </FrameLayout>

        <Space style="@style/espacio" />

        <Button
            android:id="@+id/btPositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/modificar"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
