<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoActivity"
    tools:context=".AdminEliminarAreaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/barraSuperiorEA"
            layout="@layout/barra_superior" />

        <TextView
            android:id="@+id/textView2"
            style="@style/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/eliminarArea"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/listUserArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/areasRegistradas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spAreas"
            android:layout_width="188dp"
            android:layout_height="40dp"
            android:layout_marginTop="43dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnAdmVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="openVentanaAdminMenu"
            android:text="Volver"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorRecuadro"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView"
                style="@style/logo"
                android:contentDescription="@string/logo"
                android:onClick="irAdminMenu"
                app:srcCompat="@drawable/logo" />

            <Space style="@style/espacio" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde">

                <AutoCompleteTextView
                    android:id="@+id/edtAreasAEA"
                    style="@style/texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresarArea"
                    android:textAlignment="center"
                    tools:ignore="LabelFor"
                    android:inputType="number"
                    android:gravity="center_horizontal"
                    android:imeOptions="actionDone"/>
            </FrameLayout>

            <Space style="@style/espacio" />

            <Button
                android:id="@+id/btnAdmElimArea"
                style="@style/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:onClick="eliminarArea"
                android:text="@string/eliminar"
                android:textSize="20sp"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
